Fix: buy/sell alignment styles (#52)

--- a/src/components/Order/Order.pcss
+++ b/src/components/Order/Order.pcss
@@ -114,6 +114,7 @@
       font-weight: 200;
       line-height: 2.3em;
       background-color: inherit;
+      text-align: left;
     }
 
     .cr-order-item__content {
@@ -157,7 +158,6 @@
 
     .cr-order-item__total {
       text-align: right;
-      padding-right: 15px;
       background-color: inherit;
       margin: calc(var(--gap) * 2) 0;
 
